# Castingn-AI

./: .env-sample  .gitignore  Windows AI 개발 환경 설치 가이드(uv).md  macOS AI 개발 환경 설치 가이드.md  pyproject.toml
10.공급업체평가플랫폼/data/: 견적서_샘플_A업체_삼성유통.csv  견적서_샘플_B업체_LG파트너스.csv  견적서_샘플_C업체_중소IT.csv
10.공급업체평가플랫폼/prompts/: 공급업체평가플랫폼.txt
11.구매데이터분석기/data/: 샘플_지출내역_이상포함.csv  샘플_지출내역_정상.csv
11.구매데이터분석기/prompts/: 구매데이터분석기.txt
12.ZENO제안서생성기/data/: 고객사_테스트_프로필.json
12.ZENO제안서생성기/prompts/: ZENO제안서생성기.txt
13.경쟁사인텔리전스/prompts/: 경쟁사인텔리전스.txt
3.first/prompts/: 1.first app.txt  2.time.txt  3.chatbot.txt  4.internet.txt  5.rag.txt  6.final app.txt
4.ref/code/: ref.py
4.ref/prompts/: Two-Agent-Debate-With-Tools.ipynb  debate.txt  deep_research.txt  one-agent.txt  ref.txt  streamlit.txt
5.DatabaseSQL/data/: CASTINGN_MRO_지출내역.csv  CASTINGN_외주_견적내역.csv
5.DatabaseSQL/prompts/: DB 구축.txt  DB 분석 프로그램.txt  SQL Agent.txt
7.MultiService/prompts/: 멀티세션 ref.txt  멀티유저 ref.txt
8.STT/: 회의록 양식.docx
8.STT/prompts/: STT 테스트.txt  회의 음성 예시.txt  회의록 자동 생성 (녹음).txt  회의록 자동 생성.txt
9.소싱문서자동화/data/: generate_sample_contracts.py  구매요청_샘플1_사무용품.txt  구매요청_샘플2_IT장비.txt  구매요청_샘플3_청소용역.txt
9.소싱문서자동화/prompts/: 소싱문서자동화.txt
